# ruche-gateway

./: .env.example  Dockerfile  README.md  app.py  builtin_tools.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  docker.yml  test.yml
docs/: remote-control.md
tests/: conftest.py  test_agent.py  test_builtin.py  test_conseil.py  test_graft.py  test_llm.py  test_memory.py  test_security.py  test_tools.py  test_vault.py
